fix project category nav bar spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -842,7 +842,7 @@ a {
 	text-align: center;
 	margin-top: 1em;
 	margin-bottom: 0;
-	padding-block: 0.5em;
+	padding-block: 0;
 	padding-left: 1em;
 	padding-right: 1em;
 	border-radius: 50px;
